feat: complete s05 permission pipeline